bengal.dts might be not enough, testing this...

--- a/arch/arm64/boot/dts/qcom/Makefile
+++ b/arch/arm64/boot/dts/qcom/Makefile
@@ -7,7 +7,25 @@ dtb-$(CONFIG_ARCH_QCOM)	+= msm8992-bullhead-rev-101.dtb
 dtb-$(CONFIG_ARCH_QCOM)	+= msm8994-angler-rev-101.dtb
 dtb-$(CONFIG_ARCH_QCOM)	+= msm8996-mtp.dtb
 dtb-$(CONFIG_ARCH_QCOM)	+= sdm845-mtp.dtb
-dtb-$(CONFIG_ARCH_QCOM)	+= bengal.dtb
+dtb-$(CONFIG_ARCH_QCOM)	+= i_qcom_Bengal_QRD.dtb
+dtb-$(CONFIG_ARCH_QCOM)	+= i_qcom_Bengal_SoC.dtb
+dtb-$(CONFIG_ARCH_QCOM)	+= i_qcom_generic.dtb
+dtb-$(CONFIG_ARCH_QCOM)	+= i_qcom_Scuba_2GB_DDR_SoC.dtb
+dtb-$(CONFIG_ARCH_QCOM)	+= i_qcom_Scuba_IDP.dtb
+dtb-$(CONFIG_ARCH_QCOM)	+= i_qcom_Scuba_IDP_USBC_Audio.dtb
+dtb-$(CONFIG_ARCH_QCOM)	+= i_qcom_Scuba_IOT_2GB_DDR_SoC.dtb
+dtb-$(CONFIG_ARCH_QCOM)	+= i_qcom_Scuba_IOT_IDP.dtb
+dtb-$(CONFIG_ARCH_QCOM)	+= i_qcom_Scuba_IOT_IDP_USBC_Audio.dtb
+dtb-$(CONFIG_ARCH_QCOM)	+= i_qcom_Scuba_IOT_QRD_NON_ELDO.dtb
+dtb-$(CONFIG_ARCH_QCOM)	+= i_qcom_Scuba_IOT_SoC.dtb
+dtb-$(CONFIG_ARCH_QCOM)	+= i_qcom_Scubap_IOT_SoC.dtb
+dtb-$(CONFIG_ARCH_QCOM)	+= i_qcom_Scubap_SoC.dtb
+dtb-$(CONFIG_ARCH_QCOM)	+= i_qcom_Scuba_QRD_ELDO.dtb
+dtb-$(CONFIG_ARCH_QCOM)	+= i_qcom_Scuba_QRD_IOT_ELDO.dtb
+dtb-$(CONFIG_ARCH_QCOM)	+= i_qcom_Scuba_QRD_NON_ELDO.dtb
+dtb-$(CONFIG_ARCH_QCOM)	+= i_qcom_Scuba_RUMI.dtb
+dtb-$(CONFIG_ARCH_QCOM)	+= i_qcom_Scuba_SoC.dtb
+
 
 always		:= $(dtb-y)
 subdir-y	:= $(dts-dirs)
